[gd_scene load_steps=4 format=3 uid="uid://f8og7qwbsekd"]

[ext_resource type="Script" uid="uid://c7ulyx1frx48x" path="res://gui/lift_stats/lift_stats_panel.gd" id="1_4lgcl"]
[ext_resource type="Texture2D" uid="uid://cul1k6s1su0ex" path="res://gui/assets/panel_96px.png" id="1_5gnhb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5n7oi"]

[node name="LiftStatsPanel" type="PanelContainer"]
offset_right = 254.0
offset_bottom = 118.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_5n7oi")
script = ExtResource("1_4lgcl")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_5gnhb")
region_rect = Rect2(0, 0, 96, 96)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MovementSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Movement Speed: xxx"

[node name="LoadTimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Load Time: xxx"

[node name="UnloadTimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Unload Time: xxx"
